Lots of work on the motivating paper, and a new figure.

--- a/docs/motivation/all.bib
+++ b/docs/motivation/all.bib
@@ -125,6 +125,83 @@
     keywords = "imported-10-07-2007 skype"
 }
 
+@electronic{ kenosis,
+    title = "The {Kenosis} Website",
+    url = "http://kenosis.sourceforge.net/",
+    year = "2008",
+    key = "kenosis",
+}
+
+@electronic{ debtorrent,
+    title = "The {DebTorrent} Website",
+    url = "http://debtorrent.alioth.debian.org/",
+    year = "2008",
+    key = "debtorrent",
+}
+
+@electronic{ apttorrent,
+    title = "The {Apt-Torrent} Website",
+    url = "http://sianka.free.fr/",
+    year = "2008",
+    key = "apttorrent",
+}
+
+@electronic{ azureus-dht,
+    title = "The {Azureus DHT} refernce",
+    url = "http://www.azureuswiki.com/index.php/DHT",
+    year = "2008",
+    key = "azureus-dht",
+}
+
+@electronic{ bittorrent-dht,
+    title = "The {BitTorrent DHT} Draft Specification",
+    url = "http://wiki.theory.org/BitTorrentDraftDHTProtocol",
+    year = "2008",
+    key = "bittorrent-dht",
+}
+
+@electronic{ debian,
+    title = "The {Debian} Project Website",
+    url = "http://www.debian.org/",
+    year = "2008",
+    key = "debian",
+}
+
+@electronic{ fedora,
+    title = "The {Fedora} Website",
+    url = "http://fedoraproject.org/",
+    year = "2008",
+    key = "fedora",
+}
+
+@electronic{ cpan,
+    title = "The {CPAN} Website",
+    url = "http://www.cpan.org/",
+    year = "2008",
+    key = "cpan",
+}
+
+@electronic{ cygwin,
+    title = "The {Cygwin} Website",
+    url = "http://cygwin.com/",
+    year = "2008",
+    key = "cygwin",
+}
+
+@electronic{ gentoo,
+    title = "The {Gentoo} Website",
+    url = "http://www.gentoo.org/",
+    year = "2008",
+    key = "gentoo",
+}
+
+@electronic{ popcon,
+    title = "The {Debian Popularity Contest} Website",
+    url = "http://popcon.debian.org/",
+    year = "2008",
+    key = "popcon",
+}
+
 %%%%%%% BibSonomy References %%%%%%%%%
 
 @book{bollobas01,
