Finalized initial motivation paper.

--- a/docs/motivation/all.bib
+++ b/docs/motivation/all.bib
@@ -202,7 +202,31 @@
     key = "popcon",
 }
 
+@electronic{ twisted,
+    title = "The {Twisted} Networking Engine",
+    url = "http://twistedmatrix.com/",
+    year = "2008",
+    key = "twisted",
+}
+
+@electronic{ khashmir,
+    title = "The {Khashmir} Website",
+    url = "http://khashmir.sourceforge.net/",
+    year = "2008",
+    key = "khashmir",
+}
+
 %%%%%%% BibSonomy References %%%%%%%%%
+
+@article{kademlia,
+	title = {{Kademlia: A Peer-to-Peer Information System Based on the XOR Metric}},
+	author = {P. Maymounkov and D. Mazieres},
+	journal = {Peer-To-Peer Systems: First International Workshop, IPTPS 2002, Cambridge, MA, USA, March 7-8, 2002},
+	publisher = {Springer},
+	year = 2002,
+	entrytype = {article},
+	biburl = {http://www.bibsonomy.org/bibtex/2176973f3aadadf44f498f64e9940222a/camrdale}
+}
 
 @book{bollobas01,
 	title = {Random Graphs},
